--- a/devsInterviewTask-main/index.html
+++ b/devsInterviewTask-main/index.html
@@ -1,58 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="style.css" rel="stylesheet" type="text/css"/>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="style.css" rel="stylesheet" type="text/css"/>
+    
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+        <title>Evulpo - VD</title>
+    </head>
+    <body>
+        <div class="progress">
+            <div class="progress-bar" id="myBar" role="progressbar">Question 1 of 3</div>
+        </div>
+        <div class="firs-screen" id="questionScreen">
+            <p class="question" id="question"></p>
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-md">
+                        <div class="option" id="option1" onclick="toggleChoice(0,this.id)"></div>
+                    </div>
+                    <div class="col-md">
+                        <div class="option" id="option2" onclick="toggleChoice(1,this.id)"></div>
+                    </div>
+                    <div class="col-md" id="div3">
+                        <div class="option" id="option3" onclick="toggleChoice(2,this.id)"></div>
+                    </div>
+                    <div class="d-none col-md" id="lastDiv">
+                        <div class="option" id="option4" onclick="toggleChoice(3,this.id)"></div>
+                    </div>
+                </div>
+                <button class="standard-btn" id="evaluateBtn" onclick="myEvaluation()">Evaluate!</button>
+            </div>
+            <div class="evaluation-message-right" id="evaluationMessageRight" >Awesome! :)</div>
+            <div class="evaluation-message-wrong" id="evaluationMessageWrong" >Keep trying! :(</div>
+            <button class="standard-btn" id="nextBtn" onclick="goNext()">Next</button>
+        </div>
+        <div class="d-none second-screen" id="finalScreen">
+            <div class="container">
+                <div class="img-container">
+                    <img src="\images\fox_evulpo.jpg" alt="EvulpoFox">
+                </div>
+                <div class="show-score">
+                    <h1>Thanks for learning with Evulpo</h1>
+                    <h2 id="scoreLabel">Your score is:</h2>
+                    <button class="start-again-btn" onclick="document.location.reload(true)">Start again</button>
+                </div>
+            </div>
+        </div>
+    </body>
     <script src="main.js" type="text/javascript"></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <title>Evulpo - VD</title>
-</head>
-<body>
-    <div class="progress">
-        <div class="progress-bar" id="myBar" role="progressbar" style="width: 33%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">Question 1 of 3</div>
-    </div>
-    <div class="firs-screen" id="questionScreen">
-        <p class="question" id="question"></p>
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-md">
-                    <div class="option" id="option1" onclick="toggleChoice(0,this.id)"></div>
-                </div>
-                <div class="col-md">
-                    <div class="option" id="option2" onclick="toggleChoice(1,this.id)"></div>
-                </div>
-                <div class="col-md" id="div3">
-                    <div class="option" id="option3" onclick="toggleChoice(2,this.id)"></div>
-                </div>
-                <div class="d-none col-md" id="lastDiv">
-                    <div class="option" id="option4" onclick="toggleChoice(3,this.id)"></div>
-                </div>
-            </div>
-            <button class="standard-btn" id="evaluateBtn" onclick="myEvaluation()">Evaluate!</button>
-        </div>
-        <div class="evaluation-message-right" id="evaluationMessageRight" >Awesome! :)</div>
-        <div class="evaluation-message-wrong" id="evaluationMessageWrong" >Keep trying! :(</div>
-        <button class="standard-btn" id="nextBtn" onclick="goNext()" style="display: none;">Next</button>
-    </div>
-    <div class="d-none second-screen" id="finalScreen">
-        <div class="container">
-            <div class="img-container">
-                <img src="\images\fox_evulpo.jpg" alt="EvulpoFox">
-            </div>
-            <div class="show-score">
-                <h1>Thanks for learning with Evulpo</h1>
-                <h2 id="score-label">Your score is:</h2>
-                <button class="start-again-btn" onclick="document.location.reload(true)">Start again</button>
-            </div>
-        </div>
-    </div>
-</body>
-
-<script async defer src="https://apis.google.com/js/api.js"
-        onload="this.onload=function(){};handleClientLoad()"
-        onreadystatechange="if (this.readyState === 'complete') this.onload()">
-</script>
+    <script async defer src="https://apis.google.com/js/api.js"
+            onload="this.onload=function(){};handleClientLoad()"
+            onreadystatechange="if (this.readyState === 'complete') this.onload()">
+    </script>
 
 </html>
